--- a/BackEnd/config/config.json
+++ b/BackEnd/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "postgres",
-    "password": "****",
-    "database": "****",
+    "password": "spikker6!",
+    "database": "excepcion-Database",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
