--- a/FrontEnd/exception-website/package.json
+++ b/FrontEnd/exception-website/package.json
@@ -11,9 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "firebase": "^9.9.2",
+    "framer-motion": "^7.2.1",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
