--- a/FrontEnd/exception-website/package.json
+++ b/FrontEnd/exception-website/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^7.2.1",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-script-tag": "^1.1.2",
