--- a/FrontEnd/exception-website/package.json
+++ b/FrontEnd/exception-website/package.json
@@ -10,11 +10,13 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
     "firebase": "^9.9.2",
     "framer-motion": "^7.2.1",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-script-tag": "^1.1.2",
