--- a/FrontEnd/exception-website/package.json
+++ b/FrontEnd/exception-website/package.json
@@ -19,8 +19,10 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.4.1",
     "react-script-tag": "^1.1.2",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "web-vitals": "^2.1.4"
